--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: default
             {{ post.content }}
         </div>
     </div>
-</div>
+</div>-->
 {% endfor %}
 
 <div class="pagination">
